2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestViewContent.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Track
	  API changes.

2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Track
	  API changes.

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetTesting.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.Projects/CompletionDatabaseTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Track
	  ProjectDomService/Parser API.

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Track changes
	  in warnings emitted by XML parser.

2010-07-12  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Tests/FoldingTests.cs: track API changes.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 615992 - Intellisense broken when calling
	  generic method.'.

2010-06-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs: Added
	  missing using.

2010-06-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs: Track API
	  changes.

2010-06-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestSpacingVisitor.cs: Added tests
	  for fixed fields/constants.

2010-06-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestSpacingVisitor.cs: Activated
	  unit test.

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  unit test for 'Bug 615983 - Refactoring does not include
	  object initializers'.

2010-06-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestFormattingBugs.cs: Moved test
	  suite to different namespace.
