@@ -1,5 +1,10 @@
 2010-07-18  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Track API
+	  changes.
+
+2010-07-18  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharpBinding/TestViewContent.cs:
 	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
 	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Track
